# wez-bits

./: .gitignore  Cargo.toml  README.md  toolchain.toml
src/: app.rs  application.rs  config.rs  constants.rs  domain.rs  errors.rs  main.rs  wezterm.rs
src/adapters/: cli_adapter.rs  config_adapter.rs  file_adapter.rs  mod.rs  task_execution_adapter.rs  terminal_adapter.rs
src/domain/: behaviours.rs  mod.rs  models.rs
src/ports/: config_port.rs  filesystem_port.rs  mod.rs  task_execution_port.rs  terminal_port.rs
src/project_picker/: mod.rs
src/project_picker/app/: model.rs
src/project_picker/components/: heading.rs  mod.rs  picker.rs
