[package]
name = "wez-bits"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.57"
toml = "0.9.5"

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.9.0"
